<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">FuelPriceShare</string>
    <string name="title_activity_navigate">FuelPriceSharing</string>
    <string name="title_activity_range">RangeSearch</string>
    <string name="map_api_key">AIzaSyBz0BAUBR4rF-0ReRtHCsUk9wTBD1V4NBs</string>
    <string name="action_settings">Settings</string>
    <string name="button_find_address">Find</string>
    <string name="hint_enter_location">Enter location</string>
    <string name="hint_map_bottom">Fuel stations around you</string>
    <string name="button_range_query">Around</string>

    <!-- for fuel_station table -->
    <string name="column_latitude">latitude</string>
    <string name="column_longitude">longitude</string>
    <string name="column_fuel_provided">fuel_provided</string>
    <string name="column_fuel">fuel_name</string>
    <string name="column_price">price</string>
    <string name="column_station_name">name</string>
    <string name="title_activity_path">PathActivity</string>
    <string name="route_button">Route</string>
    <string name="origin_autoComplete_hint">Enter your origin here</string>
    <string name="destination_autoComplete_hint">Enter your destination here</string>
    <string name="route_jump_button">Direction</string>

    <!-- for intent passing between activities -->
    <string name="intent_pathActivity_text">intent_pathActivity_lat##lng##addr</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_world">Hello world!</string>

    <string-array name="planets_array">
        <item>Home</item>
        <item>Profile Setting</item>
        <item>Contribute Price</item>
        <item>Others</item>

    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_upload_image">UploadImageActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_add_content">AddContentActivity</string>
    <string name="title_activity_list_view_test">ListViewTestActivity</string>
    <string name="title_activity_canvas_activity_test">CanvasActivityTest</string>
    <string name="APP_ID">1589475934622660</string>

    <drawable name="blue">#b0e0e6</drawable>
    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#cccccc</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>

    <string name="select_Category">Select Company</string>

    <drawable name="darkgrey">#606060</drawable>

    <string name="title_activity_user_profile_panel">UserProfilePanelActivity</string>
    <string name="title_activity_login_control_acontrol">LoginControlAcontrolActivity</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_profile_setting">ProfileSettingActivity</string>
    <string name="title_activity_do_refine">DoRefineActivity</string>

</resources>
